objects/Holiday_Calendar__c.object
<CustomObject><fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields><fields>
        <fullName>Payroll_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payroll System</label>
        <referenceTo>Payroll_System__c</referenceTo>
        <relationshipName>Holiday_Calendar</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR( Date__c ))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><customHelp>TOM_Admin_Guide</customHelp><deploymentStatus>Deployed</deploymentStatus><description>TOM: The holiday object is used to identify business holidays to ensure employees do not request days off on these days, since they are already entitled to paid time off.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Holiday</label><nameField>
        <label>Holiday</label>
        <type>Text</type>
    </nameField><pluralLabel>Holidays</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Payroll_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>